name:                string-conv
version:             0.1.0.0
synopsis:            Standardized conversion between string types
description:         Avoids the need to remember many different functions
                     for converting string types.  Just use one universal
                     function toS for all monomorphic string conversions.
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          oz@soostone.com
copyright:           Ozgun Ataman
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.String.Conv
  build-depends:       base >= 4 && < 5, bytestring, text
